--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -54,6 +54,10 @@ img {
     display: block;
 }
 
+footer {
+    text-align: center;
+}
+
 @media only screen and (min-width: 400px) and (max-width: 600px) {
     
     h1 {
@@ -108,6 +112,11 @@ img {
         max-width: 250px;
         margin: 0 auto;
     }
+
+    footer {
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
 }
 @media only screen and (min-width: 601px) {
     h1 {
@@ -161,5 +170,10 @@ img {
     img {
         max-width: 500px;
         margin: 30px auto;
+    }
+
+    footer {
+        font-size: 20px;
+        margin-bottom: 20px;
     }
 }
